News section refactored

--- a/templates/ctb/driver_search_facility.html
+++ b/templates/ctb/driver_search_facility.html
@@ -83,89 +83,90 @@
                         <tbody>
                         <tr>
                             <th>Fusion Drivers</th>
-                            <th class="text-end">Cases</th>
-                            <th class="text-end"><span class="d-none">From results</span></th>
+                            <th>Cases</th>
+                            <th><span class="hide-visually">From results</span></th>
                             <th>Mutated Drivers</th>
-                            <th class="text-end">Cases</th>
-                            <th class="text-end"><span class="d-none">From results</span></th>
+                            <th>Cases</th>
+                            <th><span class="hide-visually">From results</span></th>
                             <th>Not Yet Id'd</th>
-                            <th class="text-end">Cases</th>
-                            <th class="text-end"><span class="d-none">From results</span></th>
+                            <th>Cases</th>
+                            <th><span class="hide-visually">From results</span></th>
                         </tr>
                         <tr>
                             <td>Fusion.ALK</td>
-                            <td>16</td>
-                            <td>(0)</td>
+                            <td class="tar">16</td>
+                            <td class="tar table-filter-number">(8)</td>
                             <td>Mut.APC</td>
-                            <td>2</td>
-                            <td>(0)</td>
+                            <td class="tar">2</td>
+                            <td class="tar table-filter-number">(1)</td>
                             <td>NYI</td>
-                            <td>20</td>
-                            <td>(0)</td>
+                            <td class="tar">20</td>
+                            <td class="tar table-filter-number">(9)</td>
                         </tr>
                         <tr>
                             <td>Fusion.BRAF</td>
-                            <td>25</td>
-                            <td>(0)</td>
+                            <td class="tar">25</td>
+                            <td class="tar table-filter-number">(13)</td>
                             <td>Mut.BRAFV600E</td>
-                            <td>209</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">209</td>
+                            <td class="tar table-filter-number">(120)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.IGF2/IGF2BP3</td>
-                            <td>6</td>
-                            <td>(0)</td>
+                            <td class="tar">6</td>
+                            <td class="tar table-filter-number">(5)</td>
                             <td>Mut.BRAF_other</td>
-                            <td>2</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">2</td>
+                            <td class="tar table-filter-number">(0)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.LTK</td>
-                            <td>3</td>
-                            <td>(0)</td>
+                            <td class="tar">3</td>
+                            <td class="tar table-filter-number">(0)</td>
                             <td>Mut.DICER1</td>
-                            <td>3</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">3</td>
+                            <td class="tar table-filter-number">(0)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK1</td>
-                            <td>14</td>
-                            <td>(0)</td>
+                            <td class="tar">14</td>
+                            <td class="tar table-filter-number">(4)</td>
                             <td>Mut.NFE2L2</td>
-                            <td>2</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">2</td>
+                            <td class="tar table-filter-number">(0)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK3</td>
-                            <td>43</td>
-                            <td>(0)</td>
+                            <td class="tar">43</td>
+                            <td class="tar table-filter-number">(20)</td>
                             <td>Mut.RAS</td>
-                            <td>47</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">47</td>
+                            <td class="tar table-filter-number">(23)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.PPARG</td>
-                            <td>14</td>
-                            <td>(0)</td>
+                            <td class="tar">14</td>
+                            <td class="tar table-filter-number">(8)</td>
                             <td>Mut.TSC</td>
-                            <td>2</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">2</td>
+                            <td class="tar table-filter-number">(2)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.RET</td>
-                            <td>102</td>
-                            <td>(0)</td>
+                            <td class="tar">102</td>
+                            <td class="tar table-filter-number">(23)</td>
                             <td>Mut.TSHR</td>
-                            <td>7</td>
-                            <td>(0)</td>
-                            <td colspan="3"></td>
+                            <td class="tar">7</td>
+                            <td class="tar table-filter-number">(2)</td>
+                            <td colspan="3">&nbsp;</td>
                         </tr>
+
                         </tbody>
                     </table>
 
@@ -183,7 +184,7 @@
                         <div class="input-group">
                             <input type="text" name="title" id="search-save-title"
                                    class="form-control" value="" placeholder="Search Name"
-                                   aria-label=Save Search" aria-describedby="search-save">
+                                   aria-label="Save Search" aria-describedby="search-save">
                             <button class="btn btn-primary" type="button" id="search-save"><i
                                     class="fa-solid fa-floppy-disk"></i> Save Search
                             </button>
