--- a/templates/ctb/bibliography.html
+++ b/templates/ctb/bibliography.html
@@ -49,8 +49,8 @@
         <div class="tab-pane fade show active border border-top-0" id="tabcontent-2011-2021" role="tabpanel"
              aria-labelledby="tab-2011-2021">
             <div class="row">
-                <div class="col-1">
-                    <ul class="nav">
+                <div class="col-lg-1">
+                    <ul class="nav flex-lg-column">
                         <li class="nav-item">
                             <a class="nav-link btn btn-sm hover-grey-button ms-1 mt-1" href="#year-2021">2021</a>
                         </li>
@@ -87,7 +87,7 @@
 
                     </ul>
                 </div>
-                <div class="col-11">
+                <div class="col-lg-11">
                     <div class="p-3">
                         <div id="year-2021" class="anchor-section mb-4">
                             <h5>2021</h5>
@@ -286,7 +286,7 @@
                             </div>
                             <div class="mt-3"><a class="fw-bold" href="https://pubmed.ncbi.nlm.nih.gov/24749883/">DNA
                                 fingerprinting: a
-                                quality control case study for human biospecimen au</a>thentication<br>Kofanova
+                                quality control case study for human biospecimen authentication</a><br>Kofanova
                                 OA, Mathieson W, Thomas GA, Betsou F. Biopreserv Biobank. 2014
                                 Apr;12(2):151-3
                             </div>
@@ -490,8 +490,8 @@
         <div class="tab-pane fade border border-top-0" id="tabcontent-1999-2010" role="tabpanel"
              aria-labelledby="tab-1999-2010">
             <div class="row">
-                <div class="col-1">
-                    <ul class="nav flex-column">
+                <div class="col-lg-1">
+                    <ul class="nav flex-lg-column">
                         <li class="nav-item">
                             <a class="nav-link btn btn-sm hover-grey-button ms-1 mt-1" href="#year-2010">2010</a>
                         </li>
@@ -530,7 +530,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-11">
+                <div class="col-lg-11">
                     <div class="p-3">
                         <div id="year-2010">
                             <h5>2010</h5>
