change of DOB date range filter in biosample search

--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -25,7 +25,7 @@
             contact:
         </div>
         <div class="row justify-content-center">
-            <div class="col-5">
+            <div class="col-lg-5">
                 <div class="card mt-3">
                     <div class="card-header py-2 px-5"><h5>Professor Geraldine Thomas</h5>
                         <div class="card-subtitle text-muted"><strong>CTB Project Director</strong>
