--- a/templates/ctb/search_tissue_samples.html
+++ b/templates/ctb/search_tissue_samples.html
@@ -265,7 +265,7 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio"
                                                    id="patientresidency-both-regions" name="patientresidency"
-                                                   value="both">
+                                                   value="both" checked>
                                             <label class="form-check-label" for="patientresidency-both-regions">Both
                                                 Regions</label>
                                         </div>
@@ -288,19 +288,19 @@
                                             <input class="form-check-input" type="checkbox" id="dob-before-26041986"
                                                    name="dob[]" value="1">
                                             <label class="form-check-label" for="dob-before-26041986">Before
-                                                04/26/1986</label>
+                                                4/26/1986</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" id="dob-26041986-01011987"
                                                    name="dob[]" value="2">
-                                            <label class="form-check-label" for="dob-26041986-01011987">04/26/1986 to
-                                                01/01/1987</label>
+                                            <label class="form-check-label" for="dob-26041986-01011987">4/26/1986 to
+                                                4/26/1987</label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" id="dob-after-01011987"
                                                    name="dob[]" value="3">
                                             <label class="form-check-label" for="dob-after-01011987">After
-                                                01/01/1987</label>
+                                                4/26/1987</label>
                                         </div>
                                     </div>
                                 </div>
@@ -324,7 +324,7 @@
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" id="patientgender-both"
-                                                   name="patientgender" value="both">
+                                                   name="patientgender" value="both" checked>
                                             <label class="form-check-label" for="patientgender-both">Both</label>
                                         </div>
                                     </div>
