--- a/templates/ctb/latest_news.html
+++ b/templates/ctb/latest_news.html
@@ -29,8 +29,8 @@
     <div class="container mb-5">
         <div class="row">
             <div id="news">
-                <div class="row row-cols-2 row-cols-md-3 g-4 justify-content-center">
-                    <div class="col">
+                <div class="row row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
+                    <div class="col-lg">
                         <div class="card">
                             <a href="{% url 'news' 1 %}" class="card__img-link">
                                 <img src="{% static 'img/newsreactorsite.jpeg' %}" class="card-img-top"
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-lg">
                         <div class="card">
                             <a href="{% url 'news' 2 %}" class="card__img-link"><img
                                     src="{% static 'img/newslandscape.jpeg' %}"
