--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -94,76 +94,76 @@
                         </tr>
                         <tr>
                             <td>Fusion.ALK</td>
-                            <td class="tar">16</td>
-                            <td class="tar table-filter-number">(8)</td>
+                            <td class="tar">{{ counts.Fusion_ALK.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_ALK.filtered|default:0 }})</td>
                             <td>Mut.APC</td>
-                            <td class="tar">2</td>
-                            <td class="tar table-filter-number">(1)</td>
+                            <td class="tar">{{ counts.Mut_APC.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_APC.filtered|default:0 }})</td>
                             <td>NYI</td>
-                            <td class="tar">20</td>
-                            <td class="tar table-filter-number">(9)</td>
+                            <td class="tar">{{ counts.NYI.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.NYI.filtered|default:0 }})</td>
                         </tr>
                         <tr>
                             <td>Fusion.BRAF</td>
-                            <td class="tar">25</td>
-                            <td class="tar table-filter-number">(13)</td>
+                            <td class="tar">{{ counts.Fusion_BRAF.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_BRAF.filtered|default:0 }})</td>
                             <td>Mut.BRAFV600E</td>
-                            <td class="tar">209</td>
-                            <td class="tar table-filter-number">(120)</td>
+                            <td class="tar">{{ counts.Mut_BRAFV600E.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_BRAFV600E.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.IGF2/IGF2BP3</td>
-                            <td class="tar">6</td>
-                            <td class="tar table-filter-number">(5)</td>
+                            <td class="tar">{{ counts.Fusion_IGF2_IGF2BP3.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_IGF2_IGF2BP3.filtered|default:0 }})</td>
                             <td>Mut.BRAF_other</td>
-                            <td class="tar">2</td>
-                            <td class="tar table-filter-number">(0)</td>
+                            <td class="tar">{{ counts.Mut_BRAF_other.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_BRAF_other.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.LTK</td>
-                            <td class="tar">3</td>
-                            <td class="tar table-filter-number">(0)</td>
+                            <td class="tar">{{ counts.Fusion_LTK.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_LTK.filtered|default:0 }})</td>
                             <td>Mut.DICER1</td>
-                            <td class="tar">3</td>
-                            <td class="tar table-filter-number">(0)</td>
+                            <td class="tar">{{ counts.Mut_DICER1.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_DICER1.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK1</td>
-                            <td class="tar">14</td>
-                            <td class="tar table-filter-number">(4)</td>
+                            <td class="tar">{{ counts.Fusion_NTRK1.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_NTRK1.filtered|default:0 }})</td>
                             <td>Mut.NFE2L2</td>
-                            <td class="tar">2</td>
-                            <td class="tar table-filter-number">(0)</td>
+                            <td class="tar">{{ counts.Mut_NFE2L2.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_NFE2L2.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK3</td>
-                            <td class="tar">43</td>
-                            <td class="tar table-filter-number">(20)</td>
+                            <td class="tar">{{ counts.Fusion_NTRK3.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_NTRK3.filtered|default:0 }})</td>
                             <td>Mut.RAS</td>
-                            <td class="tar">47</td>
-                            <td class="tar table-filter-number">(23)</td>
+                            <td class="tar">{{ counts.Mut_RAS.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_RAS.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.PPARG</td>
-                            <td class="tar">14</td>
-                            <td class="tar table-filter-number">(8)</td>
+                            <td class="tar">{{ counts.Fusion_PPARG.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_PPARG.filtered|default:0 }})</td>
                             <td>Mut.TSC</td>
-                            <td class="tar">2</td>
-                            <td class="tar table-filter-number">(2)</td>
+                            <td class="tar">{{ counts.Mut_TSC.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_TSC.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.RET</td>
-                            <td class="tar">102</td>
-                            <td class="tar table-filter-number">(23)</td>
+                            <td class="tar">{{ counts.Fusion_RET.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Fusion_RET.filtered|default:0 }})</td>
                             <td>Mut.TSHR</td>
-                            <td class="tar">7</td>
-                            <td class="tar table-filter-number">(2)</td>
+                            <td class="tar">{{ counts.Mut_TSHR.total|default:0 }}</td>
+                            <td class="tar table-filter-number">({{ counts.Mut_TSHR.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
 
@@ -176,20 +176,28 @@
                         The relevant references should be quoted in any publication resulting from your study.
                     </div>
                     <hr>
+                    <form id="save-form">
 
-                    <div class="btn-toolbar justify-content-between" role="toolbar">
-                        <a class="btn btn-primary me-md-2" href="{% static 'files/application-form.doc' %}">
-                            <i class="fa-solid fa-download"></i> Make Application
-                        </a>
-                        <div class="input-group">
-                            <input type="text" name="title" id="search-save-title"
-                                   class="form-control" value="" placeholder="Search Name"
-                                   aria-label="Save Search" aria-describedby="search-save">
-                            <button class="btn btn-primary" type="button" id="search-save"><i
-                                    class="fa-solid fa-floppy-disk"></i> Save Search
-                            </button>
+                        <input type="hidden" name="filter_encoded_url" value="{{ filter_encoded_url }}"/>
+                        <input type="hidden" name="search_type" value="Driver"/>
+                        <input type="hidden" name="total" value="{{ total_filtered_case_count }}"/>
+                        <div class="btn-toolbar justify-content-between" role="toolbar">
+                            <a class="btn btn-primary me-md-2" href="{% url 'make_application' %}">
+                                <i class="fas fa-edit"></i> Make Application
+                            </a>
+                            <div class="input-group">
+                                <input type="text" name="title" id="search-save-title"
+                                       class="form-control" value="" placeholder="Search Name"
+                                       aria-label="Save Search" aria-describedby="search-save">
+                                <button id="search-save" class="btn btn-primary" type="button" id="search-save"><i
+                                        class="fa-solid fa-floppy-disk"></i> Save Search
+                                </button>
+                            </div>
                         </div>
-                    </div>
+                        <div class="float-end">
+                            <div id="save_message"></div>
+                        </div>
+                    </form>
                     {#                    <script id="save-search-driver-json" type="application/json">{"diagnosis":["FC"],"patientresidency":"both","patientgender":"both","ageatoperation":"0,49","ageatexposure":"-40,19","returnpatientids":true,"ids":[],"totalcases":0}</script>#}
                 </div>
             </div>
@@ -206,7 +214,10 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
+{% endblock %}
+{% block js_file %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'js/save_search.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
