--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -13,19 +13,6 @@
 
 {% block page_name %}saved_searches{% endblock %}
 
-{#{% block page_header %}#}
-{#    <div class="container">#}
-{#        <div class="pt-3">#}
-{#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
-{#                <ol class="breadcrumb">#}
-{#                    <li class="breadcrumb-item active" aria-current="page">My Saved Searches</li>#}
-{#                </ol>#}
-{#            </nav>#}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#{% endblock %}#}
-
 {% block content %}
     <div class="container py-3">
         <div class="row">
@@ -42,4 +29,9 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block js_file %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'js/saved_searches.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
