--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -77,96 +77,92 @@
                         requested. In brackets are the drivers that also meet the search criteria you entered in the
                         biosample search and the clinical search.
                     </div>
-
-
                     <table class="table table-striped table-sm">
-                        <tbody>
+                        <thead>
                         <tr>
-                            <th>Fusion Drivers</th>
-                            <th>Cases</th>
-                            <th><span class="hide-visually">From results</span></th>
-                            <th>Mutated Drivers</th>
-                            <th>Cases</th>
-                            <th><span class="hide-visually">From results</span></th>
-                            <th>Not Yet Id'd</th>
-                            <th>Cases</th>
-                            <th><span class="hide-visually">From results</span></th>
+                            <th class="text-end">Fusion Drivers</th>
+                            <th colspan="2" class="text-center">Cases</th>
+                            <th class="text-end">Mutated Drivers</th>
+                            <th colspan="2" class="text-center">Cases</th>
+                            <th class="text-end">Not Yet Id'd</th>
+                            <th colspan="2" class="text-center">Cases</th>
                         </tr>
+                        </thead>
+                        <tbody class="text-end">
                         <tr>
                             <td>Fusion.ALK</td>
-                            <td class="tar">{{ counts.Fusion_ALK.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_ALK.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_ALK.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_ALK.filtered|default:0 }})</td>
                             <td>Mut.APC</td>
-                            <td class="tar">{{ counts.Mut_APC.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_APC.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_APC.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_APC.filtered|default:0 }})</td>
                             <td>NYI</td>
-                            <td class="tar">{{ counts.NYI.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.NYI.filtered|default:0 }})</td>
+                            <td>{{ counts.NYI.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.NYI.filtered|default:0 }})</td>
                         </tr>
                         <tr>
                             <td>Fusion.BRAF</td>
-                            <td class="tar">{{ counts.Fusion_BRAF.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_BRAF.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_BRAF.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_BRAF.filtered|default:0 }})</td>
                             <td>Mut.BRAFV600E</td>
-                            <td class="tar">{{ counts.Mut_BRAFV600E.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_BRAFV600E.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_BRAFV600E.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_BRAFV600E.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.IGF2/IGF2BP3</td>
-                            <td class="tar">{{ counts.Fusion_IGF2_IGF2BP3.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_IGF2_IGF2BP3.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_IGF2_IGF2BP3.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_IGF2_IGF2BP3.filtered|default:0 }})</td>
                             <td>Mut.BRAF_other</td>
-                            <td class="tar">{{ counts.Mut_BRAF_other.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_BRAF_other.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_BRAF_other.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_BRAF_other.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.LTK</td>
-                            <td class="tar">{{ counts.Fusion_LTK.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_LTK.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_LTK.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_LTK.filtered|default:0 }})</td>
                             <td>Mut.DICER1</td>
-                            <td class="tar">{{ counts.Mut_DICER1.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_DICER1.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_DICER1.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_DICER1.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK1</td>
-                            <td class="tar">{{ counts.Fusion_NTRK1.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_NTRK1.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_NTRK1.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_NTRK1.filtered|default:0 }})</td>
                             <td>Mut.NFE2L2</td>
-                            <td class="tar">{{ counts.Mut_NFE2L2.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_NFE2L2.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_NFE2L2.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_NFE2L2.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.NTRK3</td>
-                            <td class="tar">{{ counts.Fusion_NTRK3.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_NTRK3.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_NTRK3.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_NTRK3.filtered|default:0 }})</td>
                             <td>Mut.RAS</td>
-                            <td class="tar">{{ counts.Mut_RAS.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_RAS.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_RAS.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_RAS.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.PPARG</td>
-                            <td class="tar">{{ counts.Fusion_PPARG.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_PPARG.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_PPARG.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_PPARG.filtered|default:0 }})</td>
                             <td>Mut.TSC</td>
-                            <td class="tar">{{ counts.Mut_TSC.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_TSC.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_TSC.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_TSC.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td>Fusion.RET</td>
-                            <td class="tar">{{ counts.Fusion_RET.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Fusion_RET.filtered|default:0 }})</td>
+                            <td>{{ counts.Fusion_RET.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Fusion_RET.filtered|default:0 }})</td>
                             <td>Mut.TSHR</td>
-                            <td class="tar">{{ counts.Mut_TSHR.total|default:0 }}</td>
-                            <td class="tar table-filter-number">({{ counts.Mut_TSHR.filtered|default:0 }})</td>
+                            <td>{{ counts.Mut_TSHR.total|default:0 }}</td>
+                            <td class="fw-bold">({{ counts.Mut_TSHR.filtered|default:0 }})</td>
                             <td colspan="3">&nbsp;</td>
                         </tr>
-
                         </tbody>
                     </table>
 
@@ -177,14 +173,10 @@
                     </div>
                     <hr>
                     <form id="save-form">
-
                         <input type="hidden" name="filter_encoded_url" value="{{ filter_encoded_url }}"/>
                         <input type="hidden" name="search_type" value="Driver"/>
                         <input type="hidden" name="total" value="{{ total_filtered_case_count }}"/>
-                        <div class="btn-toolbar justify-content-between" role="toolbar">
-                            <a class="btn btn-primary me-md-2" href="{% url 'make_application' %}">
-                                <i class="fas fa-edit"></i> Make Application
-                            </a>
+                        <div class="d-grid gap-2">
                             <div class="input-group">
                                 <input type="text" name="title" id="search-save-title"
                                        class="form-control" value="" placeholder="Search Name"
@@ -194,23 +186,23 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="float-end">
-                            <div id="save_message"></div>
+                        <div class="text-end mb-3">
+                            <div id="save_message" class="text-primary fw-bold ms-2"></div>
                         </div>
                     </form>
-                    {#                    <script id="save-search-driver-json" type="application/json">{"diagnosis":["FC"],"patientresidency":"both","patientgender":"both","ageatoperation":"0,49","ageatexposure":"-40,19","returnpatientids":true,"ids":[],"totalcases":0}</script>#}
                 </div>
             </div>
 
             <div class="col-lg-4">
                 <div class="border rounded bg-light p-3 mb-4">
                     <div class="d-grid gap-2 col mx-auto">
-                        <a class="btn btn-secondary" href="{% url 'search_tissue_samples' %}"><i
-                                class="fa-solid fa-left-long"></i> Back to Biosample Search Facility</a>
-                        <a class="btn btn-secondary" href="{% url 'clinical_search_facility' %}"><i
-                                class="fa-solid fa-left-long"></i> Perform Another Clinical Search</a>
-                        {#                        <a class="btn btn-outline-secondary" href="{% static 'files/application-form.doc' %}"><i#}
-                        {#                                class="fa-solid fa-download"></i> Download Application Form</a>#}
+                        <a class="btn btn-outline-secondary" href="{% url 'search_tissue_samples' %}"><i
+                                    class="fas fa-angle-double-left"></i> Back to Biosample Search Facility</a>
+                        <a class="btn btn-outline-secondary" href="{% url 'clinical_search_facility' %}"><i
+                                    class="fas fa-angle-double-left"></i> Perform Another Clinical Search</a>
+                        <a class="btn btn-secondary" role="button" href="{% url 'make_application' %}">
+                            <i class="fas fa-edit"></i> Make Application
+                        </a>
                     </div>
                 </div>
             </div>
