--- a/templates/donors/search_tissue_samples.html
+++ b/templates/donors/search_tissue_samples.html
@@ -131,19 +131,19 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="country-belarus"
-                                                   name="country[]" value="belarus">
-                                            <label class="form-check-label" for="country-belarus">Belarus</label>
-                                        </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="country-ukraine"
-                                                   name="country[]" value="ukraine">
+                                            <input class="form-check-input" type="radio" id="country-ukraine"
+                                                   name="country" value="ukraine">
                                             <label class="form-check-label" for="country-ukraine">Ukraine</label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="country-russia"
-                                                   name="country[]" value="russia">
+                                            <input class="form-check-input" type="radio" id="country-russia"
+                                                   name="country" value="russia">
                                             <label class="form-check-label" for="country-russia">Russia</label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" id="country-both"
+                                                   name="country" value="both" checked>
+                                            <label class="form-check-label" for="country-both">Both</label>
                                         </div>
                                     </div>
                                 </div>
@@ -358,7 +358,7 @@
                                             Years) <i class="fa-solid fa-circle-question info-color" data-bs-toggle="tooltip"
                                                data-bs-html="true"
                                                data-bs-placement="right"
-                                               title="<div class='text-start'>Age at exposure for cases in Group (i) may be selected using the slide selector. Researchers wishing to study the cohort that were in utero at the time of the accident should contact the secretariat for more information about the gestational age of the cases in the CTB.</div>">
+                                               title="<div class='text-start'>Age at exposure for cases in Group: Researchers wishing to study the cohort that were in utero at the time of the accident should contact the secretariat for more information about the gestational age of the cases in the CTB.</div>">
                                             </i>:</label></div>
                                         <div class="row">
                                             <div class="col-md-6">
